[package]
name = "jd_com"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version="^1.0.145", default-features = false, features=["derive"]}
serde_json = { version = "^1.0.85"}
bytes = {version = "^1.2.1"}
base64 = {version = "^0.13.0" }
md5 = {version = "^0.7.0"}
rand = { version = "^0.8.5", default-features = false, features=["std", "std_rng"]}
regex = {version = "1.6.0", default-features = false, features=["std"]}